# data_analysis_tool

./: .env.example  .gitignore  Makefile  README.md  data_analysis_tool.md  pyproject.toml  requirements.txt  setup.py  test_logging.py
src/: config.py  main.py
src/api/: dependencies.py  main.py  middleware.py
src/api/routers/: analysis.py  ingestion.py  preprocessing.py  results.py  transformation.py  upload.py
src/backend/: main.py
src/backend/api/: README.md
src/backend/api/middleware/: logging_middleware.py
src/backend/api/models/: requests.py  responses.py  return_types.py
src/backend/api/routes/: analysis.py  ingestion.py  preprocessing.py  transformation.py
src/backend/api/services/: __init__.py  data_service.py
src/backend/api/utils/: data_utils.py
src/backend/core/: context.py
src/backend/core/analysis/: base.py
src/backend/core/analysis/descriptive/: base.py  pandas_descriptive.py  polars_descriptive.py  pyspark_descriptive.py
src/backend/core/analysis/diagnostic/: base.py  pandas_diagnostic.py  polars_diagnostic.py  pyspark_diagnostic.py
src/backend/core/analysis/predictive/: base.py  pandas_predictive.py  polars_predictive.py  pyspark_predictive.py
src/backend/core/analysis/prescriptive/: base.py  pandas_prescriptive.py  polars_prescriptive.py  pyspark_prescriptive.py
src/backend/core/analysis/utils/: __init__.py  common_analysis.py
src/backend/core/engines/: base.py  pandas_engine.py  polars_engine.py  pyspark_engine.py
src/backend/core/ingestion/: base.py  pandas_ingestion.py  polars_ingestion.py  pyspark_ingestion.py
src/backend/core/preprocessing/: base.py  pandas_preprocessing.py  polars_preprocessing.py  pyspark_preprocessing.py
src/backend/core/utils/: data_type_utils.py
src/cli/: commands.py
src/core/: data_ingestion.py  engine_base.py
src/core/engines/: __init__.py  polars.py
src/core/engines/pandas/: pandas_engine.py  pandas_ingestion.py  pandas_preprocessing.py  pandas_transformation.py
src/core/engines/polars/: polars_ingestion.py  polars_preprocessing.py  polars_transformation.py
src/core/engines/pyspark/: pyspark_ingestion.py
src/frontend/: app.py  context.py
src/frontend/.streamlit/: config.toml
src/frontend/components/: analysis_renderers.py  data_preview.py  engine_selector.py  file_uploader.py  gauge_chart.py  sidebar.py  visualization.py
src/frontend/pages/: analysis.py  preprocess_page.py  preprocessing.py  upload.py  upload_page.py
src/frontend/services/: api_client.py
src/frontend/utils/: __init__.py  api_helpers.py  logging_helpers.py  streamlit_helpers.py
src/shared/: config.py  constants.py  logging_config.py  logging_example.py  session.py
tests/: conftest.py
tests/unit/: test_data_ingestion.py
